Performance enhancements & refactoring